PICK: fixed bug with negative margins and related posts on mobile displays

--- a/sass/plugins/jetpack/_jetpack.scss
+++ b/sass/plugins/jetpack/_jetpack.scss
@@ -59,6 +59,11 @@
 		text-decoration: none;
 	}
 
+	// for some reason, jetpack overrides their negative margin on mobile displays
+	#jp-relatedposts .jp-relatedposts-items-visual {
+		margin-right: -20px;
+	}
+
 	.sharedaddy {
 		@include rem('margin-top',40px);
 	}
